--- a/A_dbms/templates/dbms/dun/dun-scan.html
+++ b/A_dbms/templates/dbms/dun/dun-scan.html
@@ -14,6 +14,8 @@
         {% include 'dbms/dun/modl/dun-standing-del-mod.html' %}
         {% include 'dbms/dun/modl/dun-charge-add-mod.html' %}
         {% include 'dbms/dun/modl/dun-charge-del-mod.html' %}
+        {% include 'dbms/dun/modl/dun-retrieve-add-mod.html' %}
+        {% include 'dbms/dun/modl/dun-retrieve-del-mod.html' %}
 
     </div>
 {% endblock %}
@@ -26,5 +28,7 @@
     {% include 'dbms/dun/extra/js-dun-standing-del.html' %}
     {% include 'dbms/dun/extra/js-dun-charge-add.html' %}
     {% include 'dbms/dun/extra/js-dun-charge-del.html' %}
+    {% include 'dbms/dun/extra/js-dun-retrieve-add.html' %}
+    {% include 'dbms/dun/extra/js-dun-retrieve-del.html' %}
 
 {% endblock %}
