--- a/A_dbms/templates/dbms/dun/dun-scan.html
+++ b/A_dbms/templates/dbms/dun/dun-scan.html
@@ -16,6 +16,7 @@
         {% include 'dbms/dun/modl/dun-charge-del-mod.html' %}
         {% include 'dbms/dun/modl/dun-retrieve-add-mod.html' %}
         {% include 'dbms/dun/modl/dun-retrieve-del-mod.html' %}
+        {% include 'dbms/dun/modl/dun-inquiry-add-mod.html' %}
 
     </div>
 {% endblock %}
@@ -30,5 +31,6 @@
     {% include 'dbms/dun/extra/js-dun-charge-del.html' %}
     {% include 'dbms/dun/extra/js-dun-retrieve-add.html' %}
     {% include 'dbms/dun/extra/js-dun-retrieve-del.html' %}
+    {% include 'dbms/dun/extra/js-dun-inquiry-add.html' %}
 
 {% endblock %}
