--- a/A_dbms/templates/dbms/dun/dun.html
+++ b/A_dbms/templates/dbms/dun/dun.html
@@ -6,8 +6,10 @@
 {% block right-content-container %}
     {% include 'dbms/dun/dun/dun-filter.html' %}
     {% include 'dbms/dun/dun/dun-table.html' %}
+    {% include 'dbms/dun/modl/dun-add-mod.html' %}
 {% endblock %}
 
 {% block extra-js %}
+    {% include 'dbms/dun/extra/js-dun-add.html' %}
 
 {% endblock %}
