--- a/A_dbms/templates/dbms/dun/dun_scan/dun-summry.html
+++ b/A_dbms/templates/dbms/dun/dun_scan/dun-summry.html
@@ -4,10 +4,13 @@
         <label class="navbar-right">
             <a class="btn btn-primary btn-sm " id="addStandingB">追偿台账</a>
             <a class="btn btn-primary btn-sm " id="addClueB">财产线索</a>
-            <a class="btn btn-primary btn-sm " id="addAgentgentB">委托代理</a>
-            <a class="btn btn-primary btn-sm " id="addAgreeB">追偿流程</a>
+            <a class="btn btn-primary btn-sm " id="addDefendantB">添加被告</a>
+            <a class="btn btn-primary btn-sm " id="addStageB">资料目录</a>
             <a class="btn btn-primary btn-sm " id="addChargeB">追偿费用</a>
             <a class="btn btn-primary btn-sm " id="addRetrieveB">案款回收</a>
+            <a class="btn btn-primary btn-sm " id="addStaffB">联系人</a>
+            <a class="btn btn-primary btn-sm " id="addAgentB">代理合同</a>
+            <a class="btn btn-primary btn-sm " id="addJudgmentB">判决书</a>
         </label>
     </div>
 
