--- a/A_dbms/templates/dbms/dun/extra/js-dun-warrant-add.html
+++ b/A_dbms/templates/dbms/dun/extra/js-dun-warrant-add.html
@@ -7,7 +7,7 @@
 
     function bindAddClueB() {
         $('#addClueB').click(function () {
-            console.log("bindAddClueB")
+            console.log("bindAddClueB");
             $('#addClueModal').modal('show');
         })
     }
