--- a/A_dbms/templates/dbms/dun/modl/dun-inquiry-add-mod.html
+++ b/A_dbms/templates/dbms/dun/modl/dun-inquiry-add-mod.html
@@ -13,6 +13,9 @@
             <div class="modal-body">
                 <form class="form-horizontal">
                     {% include 'dbms/dun/modl/mod_form/dun-inquiry-add.html' %}
+                    {% include 'dbms/dun/modl/mod_form/dun-inquiry-evaluate-add.html' %}
+                    {% include 'dbms/dun/modl/mod_form/dun-inquiry-hanging-add.html' %}
+                    {% include 'dbms/dun/modl/mod_form/dun-inquiry-turn-add.html' %}
                 </form>
             </div>
             <div class="modal-footer">
