--- a/A_dbms/templates/dbms/dun/dun-scan.html
+++ b/A_dbms/templates/dbms/dun/dun-scan.html
@@ -17,6 +17,14 @@
         {% include 'dbms/dun/modl/dun-retrieve-add-mod.html' %}
         {% include 'dbms/dun/modl/dun-retrieve-del-mod.html' %}
         {% include 'dbms/dun/modl/dun-inquiry-add-mod.html' %}
+        {% include 'dbms/dun/modl/dun-custom-add-mod.html' %}
+        {% include 'dbms/dun/modl/dun-custom-del-mod.html' %}
+        {% include 'dbms/dun/modl/dun-stage-add-mod.html' %}
+        {% include 'dbms/dun/modl/dun-stage-del-mod.html' %}
+        {% include 'dbms/dun/modl/dun-staff-add-mod.html' %}
+        {% include 'dbms/dun/modl/dun-agent-add-mod.html' %}
+        {% include 'dbms/dun/modl/dun-judgment-add-mod.html' %}
+        {% include 'dbms/dun/modl/dun-judgment-del-mod.html' %}
 
     </div>
 {% endblock %}
@@ -32,5 +40,13 @@
     {% include 'dbms/dun/extra/js-dun-retrieve-add.html' %}
     {% include 'dbms/dun/extra/js-dun-retrieve-del.html' %}
     {% include 'dbms/dun/extra/js-dun-inquiry-add.html' %}
+    {% include 'dbms/dun/extra/js-dun-defendant-add.html' %}
+    {% include 'dbms/dun/extra/js-dun-defendant-del.html' %}
+    {% include 'dbms/dun/extra/js-dun-stage-add.html' %}
+    {% include 'dbms/dun/extra/js-dun-stage-del.html' %}
+    {% include 'dbms/dun/extra/js-dun-staff-add.html' %}
+    {% include 'dbms/dun/extra/js-dun-agent-add.html' %}
+    {% include 'dbms/dun/extra/js-dun-judgment-add.html' %}
+    {% include 'dbms/dun/extra/js-dun-judgment-del.html' %}
 
 {% endblock %}
