--- a/A_dbms/templates/dbms/dun/dun/dun-filter.html
+++ b/A_dbms/templates/dbms/dun/dun/dun-filter.html
@@ -16,10 +16,12 @@
             {% endif %}
         {% endfor %}
     </label>
-        <label>
+    <label>
         <form class="navbar-form" style="display: inline">
             <input type="search" name="_s" class="form-control" placeholder="合同编号,客户,银行,纪要">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
+    <label class="pull-right"><a class="btn btn-primary btn-sm" id="addDunB">新建追偿</a></label>
+
 </div>
