--- a/A_dbms/templates/dbms/dun/dun_scan/tab/stage.html
+++ b/A_dbms/templates/dbms/dun/dun_scan/tab/stage.html
@@ -2,19 +2,23 @@
     <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
+            <th>索引号</th>
             <th>流程</th>
             <th>文件</th>
+            <th>文件类型</th>
             <th>文件日期</th>
-            <th>备注</th>
+            <th>操作</th>
         </tr>
         </thead>
-        <tbody>
+        <tbody id="dun-stage-tb">
         {% for stag in dun_obj.stage_dun.all %}
-            <tr>
+            <tr stage-nid="{{ stag.id }}">
+                <td>{{ stag.stage_remark }}</td>
                 <td>{{ stag.get_stage_type_display }}</td>
                 <td>{{ stag.stage_file }}</td>
+                <td>{{ stag.get_stage_state_display }}</td>
                 <td>{{ stag.stage_date }}</td>
-                <td>{{ stag.stage_remark }}</td>
+                <td><a class="btn btn-primary btn-xs delStageB">删除</a></td>
             <tr>
         {% endfor %}
 
