--- a/A_dbms/templates/dbms/appraisal/extra/js-guarantee-add.html
+++ b/A_dbms/templates/dbms/appraisal/extra/js-guarantee-add.html
@@ -15,6 +15,7 @@
     function bind_id_sure_typ() {
         $('#id_sure_typ').change(function () {
             console.log("bind_id_sure_typ");
+            $(".search-id").empty();
             var selected_sure_typ = $('#id_sure_typ').val();
             console.log(selected_sure_typ);
             $('.guarantee-extend').hide();
