--- a/A_dbms/templates/dbms/appraisal/modl/guarantee-add-mod.html
+++ b/A_dbms/templates/dbms/appraisal/modl/guarantee-add-mod.html
@@ -13,6 +13,7 @@
             <div class="modal-body">
                 <form class="form-horizontal">
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-lendingsures-add.html' %}
+                    {% include 'dbms/appraisal/modl/mod_form/guarantee-search.html' %}
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-customs_c.html' %}
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-customs_p.html' %}
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-house-add.html' %}
@@ -21,6 +22,8 @@
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-stock-add.html' %}
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-chattel-add.html' %}
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-draft-add.html' %}
+
+
                 </form>
             </div>
             <div class="modal-footer">
