--- a/A_dbms/templates/dbms/article/article/article-filter.html
+++ b/A_dbms/templates/dbms/article/article/article-filter.html
@@ -28,7 +28,7 @@
         在保余额：{{ balance }}
     </label>
     <label class="pull-right">
-        <a class="btn btn-primary btn-sm" id="addArticle">添加项目</a>
+{#        <a class="btn btn-primary btn-sm" id="addArticle">添加项目</a>#}
     </label>
 </div>
 
