--- a/A_dbms/templates/dbms/custom/custom-scan.html
+++ b/A_dbms/templates/dbms/custom/custom-scan.html
@@ -9,6 +9,8 @@
         {% include 'dbms/custom/modl/custom-del-mod.html' %}
         {% include 'dbms/custom/modl/custom-edit-mod.html' %}
         {% include 'dbms/custom/modl/shareholder-add-mod.html' %}
+        {% include 'dbms/custom/modl/spouse-add-mod.html' %}
+
         {% include 'dbms/custom/modl/custom-article-add-mod.html' %}
     </div>
 {% endblock %}
@@ -17,6 +19,10 @@
     {% include 'dbms/custom/extra/js-custom-del.html' %}
     {% include 'dbms/custom/extra/js-custom-edit.html' %}
     {% include 'dbms/custom/extra/js-shareholder-add.html' %}
+    {% include 'dbms/custom/extra/js-spouse-add.html' %}
     {% include 'dbms/article/extra/js-article-add.html' %}
+
+    {% include 'dbms/js/js-search-custom.html' %}
+
 
 {% endblock %}
