--- a/A_dbms/templates/dbms/dun/dun-scan.html
+++ b/A_dbms/templates/dbms/dun/dun-scan.html
@@ -49,4 +49,9 @@
     {% include 'dbms/dun/extra/js-dun-judgment-add.html' %}
     {% include 'dbms/dun/extra/js-dun-judgment-del.html' %}
 
+    {% include 'dbms/js/js-search-custom.html' %}
+    {% include 'dbms/js/js-search-warrant.html' %}
+
+
+
 {% endblock %}
