--- a/A_dbms/templates/dbms/warrant/modl/owership-add-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/owership-add-mod.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="addOwerShipModal" tabindex="-1"
+<div class="modal fade" id="addCustomModal" tabindex="-1"
      role="dialog" aria-labelledby="addOwerShipModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
