--- a/A_dbms/templates/dbms/warrant/warrant-scan.html
+++ b/A_dbms/templates/dbms/warrant/warrant-scan.html
@@ -28,4 +28,6 @@
     {% include 'dbms/warrant/extra/js-housebag-add.html' %}
     {% include 'dbms/warrant/extra/js-draftbag-add.html' %}
     {% include 'dbms/warrant/extra/js-evaluate-add.html' %}
+
+    {% include 'dbms/js/js-search-custom.html' %}
 {% endblock %}
