--- a/A_dbms/templates/dbms/agree/agree/agree-filter.html
+++ b/A_dbms/templates/dbms/agree/agree/agree-filter.html
@@ -28,7 +28,7 @@
 
     {% if form_agree_add %}
         <label class="pull-right">
-            <a class="btn btn-success btn-sm" id="addAgree">添加合同</a>
+{#            <a class="btn btn-success btn-sm" id="addAgree">添加合同</a>#}
         </label>
     {% endif %}
 </div>
