--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-draft-add.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-draft-add.html
@@ -1,10 +1,22 @@
 <div id="form_lendingdraft_add" class="guarantee-extend" style="display: none">
 
-    <div class="form-group"><!--票据质押-->
-        <label for="id_sure_chattel"
+    <div class="form-group"><!--动产抵押-->
+        <label for="id_sure_draft" class="col-sm-3 control-label">{{ form_lendingdraft_add.sure_draft.label }}：</label>
+        <div class="col-sm-9">
+            <select name="id_sure_draft" id="id_sure_draft" multiple="" required="" class="form-control search-id">
+                <!--<option value="" selected="">---------</option>-->
+            </select>
+        </div>
+        <label id="e_sure_draft" class="pull-right">{{ form_lendingchattel_add.sure_chattel.errors }}</label>
+    </div>
+
+    <!--
+    <div class="form-group">
+        <label for="id_sure_draft"
                class="col-sm-3 control-label">{{ form_lendingdraft_add.sure_draft.label }}：</label>
         <div class="col-sm-9">{{ form_lendingdraft_add.sure_draft }}</div>
-        <label id="e_sure_chattel" class="pull-right">{{ form_lendingdraft_add.sure_draft.errors }}</label>
+        <label id="e_sure_draft" class="pull-right">{{ form_lendingdraft_add.sure_draft.errors }}</label>
     </div>
+    -->
 
 </div>
