--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-ground-add.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-ground-add.html
@@ -1,10 +1,22 @@
 <div id="form_lendingground_add" class="guarantee-extend" style="display: none">
 
-    <div class="form-group"><!--土地抵押-->
+    <div class="form-ground"><!--动产抵押-->
+        <label for="id_sure_ground"
+               class="col-sm-3 control-label">{{ form_lendingground_add.sure_ground.label }}：</label>
+        <div class="col-sm-9">
+            <select name="sure_ground" id="id_sure_ground" multiple="" required="" class="form-control search-id">
+                <!--<option value="" selected="">---------</option>-->
+            </select>
+        </div>
+        <label id="e_sure_ground" class="pull-right">{{ form_lendingground_add.sure_ground.errors }}</label>
+    </div>
+
+    <!--
+    <div class="form-group">
         <label for="id_sure_house" class="col-sm-3 control-label">
             {{ form_lendingground_add.sure_ground.label }}：</label>
         <div class="col-sm-9">{{ form_lendingground_add.sure_ground }}</div>
         <label id="e_sure_house" class="pull-right">{{ form_lendingground_add.sure_ground.errors }}</label>
     </div>
-
+    土地抵押-->
 </div>
