--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-house-add.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-house-add.html
@@ -1,7 +1,17 @@
 <div id="form_lendinghouse_add" class="guarantee-extend" style="display: none">
     <div class="form-group"><!--房产抵押-->
+        <label for="id_sure_house"
+               class="col-sm-3 control-label">{{ form_lendinghouse_add.sure_house.label }}：</label>
+        <div class="col-sm-9">
+            <select name="sure_house" id="id_sure_house" multiple="" required="" class="form-control search-id">
+            </select>
+        </div>
+        <label id="e_sure_house" class="pull-right">{{ form_lendinghouse_add.sure_house.errors }}</label>
+    </div>
+    <!--
+    <div class="form-group">
         <label for="id_sure_house" class="col-sm-3 control-label">{{ form_lendinghouse_add.sure_house.label }}：</label>
         <div class="col-sm-9">{{ form_lendinghouse_add.sure_house }}</div>
         <label id="e_sure_house" class="pull-right">{{ form_lendinghouse_add.sure_house.errors }}</label>
-    </div>
+    </div>房产抵押-->
 </div>
