--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-receivable-add.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-receivable-add.html
@@ -1,11 +1,23 @@
 <div id="form_lendinggreceivable_add" class="guarantee-extend" style="display: none">
 
-    <div class="form-group"><!--应收质押-->
+    <div class="form-ground"><!--应收质押-->
+        <label for="id_sure_receivable"
+               class="col-sm-3 control-label">{{ form_lendingground_add.sure_ground.label }}：</label>
+        <div class="col-sm-9">
+            <select name="sure_receivable" id="id_sure_receivable" multiple="" required=""
+                    class="form-control search-id">
+            </select>
+        </div>
+        <label id="e_sure_receivable" class="pull-right">{{ form_lendingground_add.sure_ground.errors }}</label>
+    </div>
+
+    <!--
+    <div class="form-group">
         <label for="id_sure_receivable" class="col-sm-3 control-label">
             {{ form_lendinggreceivable_add.sure_receivable.label }}：</label>
         <div class="col-sm-9">{{ form_lendinggreceivable_add.sure_receivable }}</div>
         <label id="e_sure_receivable" class="pull-right">
             {{ form_lendinggreceivable_add.sure_receivable.errors }}</label>
-    </div>
+    </div>应收质押-->
 
 </div>
