--- a/A_dbms/templates/dbms/article/modl/article-agree-add-mod.html
+++ b/A_dbms/templates/dbms/article/modl/article-agree-add-mod.html
@@ -1,23 +1,24 @@
-<div class="modal fade" id="addWarrantModal" tabindex="-1"
-     role="dialog" aria-labelledby="addClueModal">
+<div class="modal fade" id="addAgreeModal" tabindex="-1"
+     role="dialog" aria-labelledby="addAgreeModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="addClueModalLabel">财产线索：{{ dun_obj.title }}
-                    <input style="display: none" name="dun_id" value="{{ dun_obj.id }}">
-                </h4>
+                <h4 class="modal-title" id="addAgreeModalLabel">添加委托保证合同</h4>
+                <input style="display: none" name="lending" value="{{ lending_obj.id }}">
+
             </div>
             <div class="modal-body">
                 <form class="form-horizontal">
-                    {% include 'dbms/dun/modl/mod_form/dun-warrant-add.html' %}
+                    {% include 'dbms/article/modl/mod_form/article-agree-add.html' %}
                 </form>
             </div>
+            <label id="formErrors"></label>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="addClueModalOk">添加</button>
+                <button type="button" class="btn btn-primary" id="addAgreeModalOk">确定</button>
             </div>
         </div>
     </div>
