--- a/A_dbms/templates/dbms/article/scan/article-summry.html
+++ b/A_dbms/templates/dbms/article/scan/article-summry.html
@@ -2,15 +2,13 @@
     <div class="panel-heading">
         <label>项目情况</label>
         <label class="navbar-right">
-            <a class="btn btn-primary btn-sm " id="feedbackArticle">
-                反馈
-            </a><!--#path('article/del/'-->
-            <a class="btn btn-primary btn-sm " id="editArticle">
-                修改
-            </a><!--#path('article/del/'-->
-            <a class="btn btn-danger btn-sm " id="delArticle">
-                删除
-            </a><!--#path('article/del/'-->
+            {% if  PAGE_TITLE == '查看项目' %}
+                <a class="btn btn-primary btn-sm " id="feedbackArticle">反馈</a><!--#path('article/del/'-->
+                <a class="btn btn-primary btn-sm " id="editArticle">修改</a><!--#path('article/del/'-->
+                <a class="btn btn-danger btn-sm " id="delArticle">删除</a><!--#path('article/del/'-->
+            {% elif  PAGE_TITLE == '放款次序' %}
+                <a class="btn btn-success btn-sm" id="addAgree">出合同</a>
+            {% endif %}
         </label>
     </div>
 
