--- a/A_dbms/templates/dbms/custom/scan/custom-tab.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-tab.html
@@ -11,6 +11,10 @@
             <li role="presentation">
                 <a href="#shareholder" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">股东信息</a></li>
+        {% elif custom_obj.genre == 2 %}
+            <li role="presentation">
+                <a href="#spouse" style="background-color: #f5f5f5"
+                   aria-controls="profile" role="tab" data-toggle="tab">配偶信息</a></li>
         {% endif %}
         <li role="presentation">
             <a href="#project_status" style="background-color: #f5f5f5"
@@ -28,6 +32,9 @@
                 {% include 'dbms/custom/scan/tab/business_information.html' %}</div>
             <div role="tabpanel" class="tab-pane" id="shareholder"> <!--股东信息-->
                 {% include 'dbms/custom/scan/tab/shareholder.html' %}</div>
+        {% elif custom_obj.genre == 2 %}
+            <div role="tabpanel" class="tab-pane" id="spouse"> <!--配偶-->
+                {% include 'dbms/custom/scan/tab/spouse.html' %}</div>
         {% endif %}
         <div role="tabpanel" class="tab-pane" id="project_status"> <!--项目情况-->
             {% include 'dbms/custom/scan/tab/project_status.html' %}</div>
